--- a/package.json
+++ b/package.json
@@ -11,6 +11,15 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "body-parser": "~1.17.1",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.3",
+    "ejs": "^2.5.6",
+    "express": "~4.15.2",
+    "jade": "~1.11.0",
+    "mongoose": "^4.11.5",
+    "morgan": "~1.8.1",
+    "serve-favicon": "~2.4.2",
     "vue": "^2.3.3",
     "vue-lazyload": "^1.0.6",
     "vue-router": "^2.6.0"
