--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "morgan": "~1.8.1",
     "serve-favicon": "~2.4.2",
     "vue": "^2.3.3",
+    "vue-infinite-scroll": "^2.0.1",
     "vue-lazyload": "^1.0.6",
     "vue-router": "^2.6.0"
   },
